--- a/src/client/style.css
+++ b/src/client/style.css
@@ -2,4 +2,13 @@ body {
   padding: 0;
   margin: 0;
   overflow: hidden;
+  background: rgb(31, 36, 43);
+  position: relative;
+}
+
+canvas {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
 }
